--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /.phpunit.cache
-/node_modules
+src/node_modules
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-.env
+src/vendor
+src/.env
 .env.backup
 .env.production
 .phpunit.result.cache
