--- a/src/package.json
+++ b/src/package.json
@@ -9,14 +9,18 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.0.0",
+        "@types/node": "^20.6.2",
+        "@types/ziggy-js": "^1.3.3",
+        "@vitejs/plugin-vue": "^4.3.4",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.8.0",
+        "laravel-vite-plugin": "^0.8.1",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
+        "typescript": "^5.2.2",
+        "vite": "^4.4.9",
+        "vue": "^3.3.4",
+        "ziggy-js": "^1.6.2"
     }
 }
