--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,8 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.1",
         "postcss": "^8.4.14",
+        "sass": "^1.68.0",
+        "sass-loader": "^13.3.2",
         "tailwindcss": "^3.1.0",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
