--- a/src/package.json
+++ b/src/package.json
@@ -24,5 +24,9 @@
         "vite": "^4.4.9",
         "vue": "^3.3.4",
         "ziggy-js": "^1.6.2"
+    },
+    "dependencies": {
+        "@morev/vue-transitions": "^2.3.6",
+        "@vueuse/core": "^10.5.0"
     }
 }
