--- a/src/composer.json
+++ b/src/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -10,9 +13,10 @@
         "inertiajs/inertia-laravel": "^0.6.8",
         "ladumor/laravel-pwa": "^0.0.4",
         "laravel/framework": "^10.10",
-        "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "symfony/http-client": "^6.3",
+        "symfony/mailgun-mailer": "^6.3",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
