Test mailgun on production

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,59 +1,75 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME=APP_NAME
+APP_ENV= # local | production
+APP_KEY=APP_KEY
+APP_DEBUG= # true(for local) | false(for production)
+APP_URL=APP_URL
 
-LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_CHANNEL=stack # DONT KNOW
+LOG_DEPRECATIONS_CHANNEL=null # DONT KNOW
+LOG_LEVEL=debug # DONT KNOW
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION="mysql | sqlite | postgres"
+DB_HOST= # host should be filled for access locally / DO NOT USE THIS ON GCP
+DB_PORT= # port should be filled for access locally / DO NOT USE THIS ON GCP
+DB_SOCKET= # socket should be filled for production access / DO NOT USE THIS LOCALLY
+DB_DATABASE=DB_DATABASE
+DB_USERNAME=DB_USERNAME
+DB_PASSWORD=DB_PASSWORD
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
+# BROADCAST_DRIVER=log # DONT KNOW
+# CACHE_DRIVER=file # DONT KNOW
+# FILESYSTEM_DISK=local # DONT KNOW
+# QUEUE_CONNECTION=sync # DONT KNOW
+# SESSION_DRIVER=database # DONT KNOW
+# SESSION_LIFETIME=120 # DONT KNOW
 
-MEMCACHED_HOST=127.0.0.1
+# MEMCACHED_HOST=127.0.0.1 # DONT KNOW
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+########### REDIS START ###########
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# REDIS_HOST=127.0.0.1 # DONT KNOW
+# REDIS_PASSWORD=null # DONT KNOW
+# REDIS_PORT=6379 # DONT KNOW
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+########### MAILER START ###########
 
-VITE_APP_NAME="${APP_NAME}"
-VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VITE_PUSHER_HOST="${PUSHER_HOST}"
-VITE_PUSHER_PORT="${PUSHER_PORT}"
-VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MAIL_MAILER= # mailgun | smtp
+
+## if MAIL_MAILER=mailgun
+MAILGUN_DOMAIN= # this should be fetched from mailgun dashboard
+MAILGUN_SECRET= # this is API sending key from mailgun dashboard
+MAILGUN_ENDPOINT= # api.eu.mailgun.net | api.eu.mailgun.net
+
+## else if MAIL_MAILER=smtp
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
+MAIL_USERNAME= # this comes from SMTP credentials from mailgun dashboard
+MAIL_PASSWORD= # this comes from SMTP credentials from mailgun dashboard
+MAIL_HOST= # smtp.mailgun.org | smtp.eu.mailgun.org
+
+## GLOBAL
+MAIL_FROM_ADDRESS=noreply@mail.client-craft.com
+MAIL_FROM_NAME="Client Craft"
+
+## THIS IS NOT USED AS WE'RE USING GCP
+# AWS_ACCESS_KEY_ID=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_DEFAULT_REGION=us-east-1
+# AWS_BUCKET=
+# AWS_USE_PATH_STYLE_ENDPOINT=false
+
+# PUSHER_APP_ID= # DONT KNOW
+# PUSHER_APP_KEY= # DONT KNOW
+# PUSHER_APP_SECRET= # DONT KNOW
+# PUSHER_HOST= # DONT KNOW
+# PUSHER_PORT=443 # DONT KNOW
+# PUSHER_SCHEME=https # DONT KNOW
+# PUSHER_APP_CLUSTER=mt1 # DONT KNOW
+
+# VITE_APP_NAME="${APP_NAME}" # DONT KNOW
+# VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}" # DONT KNOW
+# VITE_PUSHER_HOST="${PUSHER_HOST}" # DONT KNOW
+# VITE_PUSHER_PORT="${PUSHER_PORT}" # DONT KNOW
+# VITE_PUSHER_SCHEME="${PUSHER_SCHEME}" # DONT KNOW
+# VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}" # DONT KNOW
