ci(DEV): add commit lint & only-allow
add a precommit script calling commit lint
create a config file to set commit lint rules
add preinstall hook to only allow npm  usage

--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,9 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build && vite build --ssr && vite build && vite build --ssr --ssr",
-        "prepare": "cd .. && husky install ./src/.husky"
+        "prepare": "cd .. && husky install ./src/.husky",
+        "commitlint": "commitlint --edit",
+        "preinstall": "npx only-allow npm"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
