--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,7 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
-        "@types/node": "^20.6.2",
+        "@types/node": "^20.8.10",
         "@types/ziggy-js": "^1.3.3",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vue/server-renderer": "^3.2.31",
@@ -32,6 +32,8 @@
     },
     "dependencies": {
         "@morev/vue-transitions": "^2.3.6",
-        "@vueuse/core": "^10.5.0"
+        "@vueuse/core": "^10.5.0",
+        "commitlint": "^18.2.0",
+        "prettier": "^3.0.3"
     }
 }
