--- a/src/package.json
+++ b/src/package.json
@@ -27,10 +27,11 @@
         "tailwindcss": "^3.1.0",
         "typescript": "^5.2.2",
         "vite": "^4.4.9",
-        "vue": "^3.3.4",
+        "vue": "^3.4.3",
         "ziggy-js": "^1.6.2"
     },
     "dependencies": {
+        "@bhplugin/vue3-datatable": "^1.1.3",
         "@morev/vue-transitions": "^2.3.6",
         "@vueuse/core": "^10.5.0",
         "commitlint": "^18.2.0",
