--- a/src/composer.json
+++ b/src/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "stancl/tenancy": "^3.7",
         "symfony/http-client": "^6.3",
         "symfony/mailgun-mailer": "^6.3",
         "tightenco/ziggy": "^1.0"
